--- a/index.html
+++ b/index.html
@@ -11,49 +11,22 @@
 <body>
     <h1>Coding Quiz</h1>
 
-<section>
+    <button type="button">Click Me!</button>
+
+<div class="divContainer">
 
 <ul>
- <h2>What is an API?</h2>
- <ol>
-    <li>Set of methods</li>
-    <li>Set of events</li>
-    <li>Set of URLs</li>
-    <li>All the above</li>
- </ol>
 
- <h2>What are examples of primitive data type?</h2>
- <ol>
-    <li>String</li>
-    <li>Number</li>
-    <li>CSS</li>
-    <li>1 and 2</li>
- </ol>
+  <h2 class="question1"></h2>
 
- <h2>What is the href attribute?</h2>
- <ol>
-    <li>Specifies what media/device the linked document is optimized for.</li>
-    <li>Specifies the relationship between the current document and the linked document.</li>
-    <li>Specifies the URL of the page the link goes to.</li>
-    <li>Specifies the media type of the linked document.</li>
- </ol>
+  <h2 class="question2"></h2>
 
- <h3>
+  <h2 class="question3"></h2>
 
-<p>var allPlanets = [“Mercury”, “Venus”, “Earth”, “Mars”, “Jupiter”, “Saturn”, “Uranus”, “Neptune”, “Pluto”];</p>
+  <h2 class="question4"></h2>
 
-<p>allPlanets.pop();</p>			
-		
-    <h3>What .pop(); will do?</h3>
-<ol>
-    <li>Removes the last variable.</li>
-    <li>Adds to the end.</li>
-    <li>Sort alphabetically.</li>
-    <li>Combines.</li>
-</ol>
 </ul>
-
-</section>
+</div>
 
 <script src="./assets/js/script.js"></script>
 </body>
