--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Link to stylesheet -->
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Coding Quiz</title>
+    <title>Code Quiz</title>
     
  </head>
 <body>
-    <h1>Coding Quiz</h1>
+    <h1>Code Quiz</h1>
 
-    <button type="button">Click Me!</button>
+    <button class="start-button">Click Me!</button>
 
 <div class="divContainer">
 
@@ -27,7 +28,7 @@
 
 </ul>
 </div>
-
+<!-- Link to script file to JS -->
 <script src="./assets/js/script.js"></script>
 </body>
 </html>
